--- a/templates/view.html
+++ b/templates/view.html
@@ -1,3 +1,5 @@
+<!-- the templates will be eliminated soon
+  in favor of pure markdown -->>
 <h1>{{.Title}}</h1>
 
 <p>[<a href="/edit/{{.Title}}">edit</a>]</p>
